# dynamic-model_2024

./: Dockerfile  README.md  compose-dev.yaml  pyproject.toml
src/: dask-report.html  main.py  manage.py
src/config/: __init__.py  data_config.yaml  filesystem_config.yaml  lexicon.txt  model_config.yaml  training_config.yaml
src/dataloading/: data_tools.py  dataset.py  mat_to_hdf5.py  preprocess.py
src/evaluation/: evaluator.py
src/inference/: contrastive_inference.py  ctc_inference.py
src/modeling/: __init__.py  dynamic_model.py  shared_components.py
src/modeling/components/: __init__.py  abstract_component.py  ctc_decoder.py  frame_encoder.py  frame_intake.py  frame_projector.py
src/modeling/components/archived/: temporal_decoder.py
src/runs/: __init__.py  combined_run.py  ctc_runs.py  simclr_run.py  temporal_ica_run.py  utils.py
src/training/: __init__.py  trainer.py
src/training/losses/: __init__.py  info_nce_loss.py  word_error_rate.py
src/utils/: memory_utils.py  phoneme_utils.py  signal_utils.py
testing/unit/: conftest.py
testing/unit/dataloading/: test_mat_dataset.py
testing/unit/inference/: test_temporal_ica_inference.py
testing/unit/modeling/: test_model_components.py  test_models.py
testing/unit/training/: conftest.py  test_losses.py  test_trainers.py
testing/unit/utils/: test_signal_utils.py
