[tool.poetry]
name = "src"
version = "0.1.0"
description = "A dynamic model architecture for developing a speech BCI neural decoder."
authors = ["Oliver Shetler <cos2112@cumc.columbia.edu>"]

[tool.poetry.dependencies]
python =  ">=3.9,<4.0"
torch = "^2.1.1"
torchvision = "^0.16.1"
pytorch-ignite = "^0.4.4"
tiktoken = "^0.5.2"
hydra-core = "^1.1.0"
wandb = "^0.10.31"
numpy = "^1.20.2"
scipy = "^1.6.2"
protobuf = "^3.20"
dask = {extras = ["distributed"], version = "^2023.12.1"}
bokeh = "^3.3.2"
g2p_en = "^2.1.0"
h5py = "^3.10.0"
psutil = "^5.9.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"